--- a/underscore.mdx
+++ b/underscore.mdx
@@ -189,5 +189,5 @@ combination with underscore references to transform features:
 #### Other
 
 * [`head`](/api-docs#head)
-* [`cosine_similarity`](/pi-docs#cosine_similarity)
+* [`cosine_similarity`](/api-docs#cosine_similarity)
 * [`sagemaker_predict`](/api-docs#sagemaker_predict)
