changelog dropping support for 3.8

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -59,6 +59,11 @@ We've updated the Usage Dashboard with a new view under the Pod Resources tab th
 requests by pod as grouped by cluster, environment, namespace, and service! If you have any questions about the usage
 dashboard, please reach out to the Chalk team. 
 
+### Dropping support for Python 3.8
+
+From `chalkpy==2.55.0`, Chalk is dropping support for Python 3.8,
+which has reached [end-of-life](https://devguide.python.org/versions/).
+If you are still using Python 3.8, please upgrade to Python 3.9 or higher.
 
 ## October 21, 2024
 
