--- a/customer-cloud-auth.mdx
+++ b/customer-cloud-auth.mdx
@@ -7,7 +7,7 @@ description: Configure SAML and OIDC providers for Chalk
 ## SAML Configuration (e.g. Okta)
 
 Before configuring SAML, please ensure that you have the information for configuring your SAML provider.
-For Okta, please view [this documentation](/docs/okta-saml.mdx).
+For Okta, please view [this documentation](/docs/okta-saml).
 
 To configure SAML for your Chalk deployment, you will need to add the following information to your
 your `values.yaml`:
