--- a/envoy-gateway-deployment.mdx
+++ b/envoy-gateway-deployment.mdx
@@ -1,5 +1,5 @@
 ---
-title: Chalk Self-Managed Deployments: Envoy Gateway
+title: Chalk Self-Managed Deployments (Envoy Gateway)
 description: Manage and Deploy the Envoy Gateway in your Chalk Cloud
 ---
 
