Added persistence docs

--- a/metrics-installation.mdx
+++ b/metrics-installation.mdx
@@ -57,7 +57,7 @@ The following is an example configuration for a metrics database:
 }
 ```
 
-## Configuation Options
+## Configuration Options
 <AttributeTable>
 <Attribute field={'timescale_image'} kind={'string'}>
 The docker image to use for the metrics database.
