Added persistence docs

--- a/background-peristence-installation.mdx
+++ b/background-peristence-installation.mdx
@@ -13,7 +13,7 @@ Chalk uses background writers hosted in the ("Customer Cloud") kubernetes cluste
 to write information about queries to various storage locations.
 
 ## Prerequisites
-In order to install a Chalk metrics database, you need to have the following:
+In order to install Chalk persistence writers, you need to have the following:
 
 - Namespace to deploy the database into
 
