Added persistence docs

--- a/background-peristence-installation.mdx
+++ b/background-peristence-installation.mdx
@@ -20,6 +20,7 @@ In order to install Chalk persistence writers, you need to have the following:
 If using Kafka:
 
 - Kafka brokers
+- Kafka topics for each bus
 - Kafka authentication secret stored in AWS Secrets Manager
 
 If using Pubsub:
