missing close tag

--- a/background-peristence-installation.mdx
+++ b/background-peristence-installation.mdx
@@ -215,3 +215,5 @@ The name of the Snowflake storage integration.
 <Attribute field={'metadata_provider'} kind={'string'}>
 The metadata provider to use ("GRPC_SERVER")
 </Attribute>
+</AttributeTable>
+
