offline query docs

--- a/api-components.mdx
+++ b/api-components.mdx
@@ -19,6 +19,6 @@ The following concepts are the foundation of our implementation:
   your features through one of Chalk's API clients. At query time, you can choose
   to [override any feature caching](/docs/query-caching).
 - **[Training](/docs/temporal-consistency)** - Chalk supports querying your
-  offline features directly from a [Python notebook](/docs/training-client).
+  offline features directly from a [Python notebook](/docs/query-offline).
 - **[Data Export](/docs/sinks)** - Data can be exported from your offline
   feature store to any destination of your choice.
