--- a/changelog.mdx
+++ b/changelog.mdx
@@ -610,7 +610,7 @@ With ChalkPy v2.38.8 or later, you can now pass [spine_sql_query](/api-docs#Chal
 to offline queries. The resulting rows of the SQL query will be used as input to the offline query. Chalk will compute
 an efficient query plan to retrieve your SQL data without requiring you to load the data and transform it into input
 before sending it back to Chalk. For more details, check out [our
-documentation](/docs/training-client#sql-queries-as-input).
+documentation](/docs/query-offline#sql-queries-as-input).
 
 ### Static planning of underscore expressions
 
