--- a/integration-tests.mdx
+++ b/integration-tests.mdx
@@ -22,7 +22,7 @@ shipping your code to production.
 Chalk allows you to create an unlimited number of branch deployments.
 Branch deployments run all of your resolvers in the same way
 that they run in production. However, branch deployments don't impact
-the [offline store](/docs/training-client).
+the [offline store](/docs/query-offline).
 
 ### Creating a branch deployment
 
