--- a/lifecycle.mdx
+++ b/lifecycle.mdx
@@ -86,7 +86,7 @@ with the new changes.
 Chalk allows you to create an unlimited number of branch deployments.
 Branch deployments run all of your resolvers in the same way
 that they run in production. However, branch deployments don't impact
-the [offline store](/docs/training-client). You can create a branch
+the [offline store](/docs/query-offline). You can create a branch
 deployment with the following command:
 
 ```bash
