--- a/notebook-tutorial.mdx
+++ b/notebook-tutorial.mdx
@@ -655,7 +655,7 @@ run offline queries.
 To dive deeper into Chalk, check out our documentation on the topics listed below
 
 - [`DataFrame`](/docs/dataframe)
-- [Offline Queries](/docs/training-client)
+- [Offline Queries](/docs/query-offline)
 - [SQL Integrations](/docs/sql)
 - [Backfills](/docs/backfilling-data)
 - [Temporal Consistency](/docs/temporal-consistency)
