--- a/resolver-tags.mdx
+++ b/resolver-tags.mdx
@@ -79,7 +79,7 @@ and don't need to return the same types.
 
 Like [Environments](/docs/resolver-environments), tags control when resolvers run
 based on the
-[Online Context](/docs/query-basics) or [Training Context](/docs/training-client)
+[Online Context](/docs/query-basics) or [Training Context](/docs/query-offline)
 matching the tags provided to the resolver decorator.
 Resolvers optionally take a keyword argument named `tags`
 that can take one of three types:
