--- a/reverse-etl.mdx
+++ b/reverse-etl.mdx
@@ -15,7 +15,7 @@ and our operational system is the online data store
 The online data store is queried by
 one our our [API clients](/docs/query-basics),
 while the offline data store queried by
-our [bulk API](/docs/training-client).
+our [bulk API](/docs/query-offline).
 
 Data from online resolvers is always loaded into the offline store
 and made available for training.
