--- a/sagemaker-tutorial.mdx
+++ b/sagemaker-tutorial.mdx
@@ -214,7 +214,7 @@ model. Additionally, it allows you re-run later steps in your pipeline without r
 step.</TipInfo>
 
 In the previous section, we set up our features and resolvers without going into great detail about how the code would
-be executed. Here, we'll finally show how the code gets executed through a [Chalk offline query](/docs/training-client):
+be executed. Here, we'll finally show how the code gets executed through a [Chalk offline query](/docs/query-offline):
 
 ```diff-py steps/dataset.py
 from sagemaker.workflow.function_step import step
