--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -192,7 +192,7 @@ your Chalk deployment performs as expected.
 
 Once you promote your deployment to production, Chalk makes features
 available for low-latency [online inference](/docs/query-basics) and
-[offline training](/docs/training-client). Chalk uses
+[offline training](/docs/query-offline). Chalk uses
 the **exact same source code** to serve [temporally-consistent](/docs/temporal-consistency) training
 sets to data scientists and live feature values to models. This re-use
 dramatically shortens development time and ensures that feature values
