--- a/backfilling-data.mdx
+++ b/backfilling-data.mdx
@@ -63,7 +63,7 @@ by default, even if the query is changed.
 Chalk lets you reset the maximum observed timestamp of incremental resolvers to a specific timestamp,
 or re-ingest all historical data.
 
-Chalk uses [offline queries](/docs/training-client) to perform this operation. Suppose you want to add a new column,
+Chalk uses [offline queries](/docs/query-offline) to perform this operation. Suppose you want to add a new column,
 `favorite_color`, to this existing batch SQL resolver:
 
 ```py
