--- a/offline-query.mdx
+++ b/offline-query.mdx
@@ -189,7 +189,7 @@ as [online query](/docs/query-online).
 
 Like [online queries](/docs/query-basics),
 offline queries can be debugged using the `explain` flag, which logs the query execution plan, and
-the `store_plan_stages` flag, which stores the outputs of each of the plan stages,
+the `store_plan_stages` flag, which stores the inputs and outputs of each of the plan stages,
 which will be visible in the web dashboard's query detail view.
 More on these and other tips [here](/docs/debugging-queries).
 
