--- a/offline-query.mdx
+++ b/offline-query.mdx
@@ -197,7 +197,7 @@ More on these and other tips [here](/docs/debugging-queries).
 
 Offline queries that run on a large number of rows require their own compute resources and infrastructure
 to ensure they complete and do not contend with resources from other workloads like the engine or branch server.
-Chalk handles this by launching a Kubernetes job that can runs asynchronously on dedicated compute nodes.
+Chalk handles this by launching a Kubernetes job that runs asynchronously on dedicated compute nodes.
 To do so, set the `run_asynchronously` flag to `True` in the `offline_query` method.
 
 ```python
