--- a/offline-query.mdx
+++ b/offline-query.mdx
@@ -211,7 +211,7 @@ client.offline_query(
 )
 ```
 
-If you'd like to adjust the resource compute or memory for the job,
+If you'd like to adjust the compute or memory resources for the job,
 set the `resources` parameter to a custom [`ResourceRequests`](/api-docs#ResourceRequests) object.
 Ensure that the request values are compatible with the resources available on Kubernetes cluster.
 
