--- a/resolver-online-offline.mdx
+++ b/resolver-online-offline.mdx
@@ -56,7 +56,7 @@ When you execute an offline query, Chalk will kick off a job that acquires the r
 every primary key/timestamp combination presented. This could take a few seconds!
 Since offline queries often lookup data for thousands of
 rows, they are not designed to be used to make millisecond-level decisions.
-See our guide on [querying training data](/docs/query-offline)
+See our guide on [online queries](/docs/query-offline)
 for a more in-depth treatment.
 
 |                  | online query                                                                                                                       | offline query                                                                                                                                                                                                                                                                           |
