--- a/named_queries.mdx
+++ b/named_queries.mdx
@@ -7,7 +7,7 @@ With Chalk [NamedQuery](/api-docs#NamedQuery) objects, you can define and versio
 your common query patterns in code. This provides a few advantages:
 - queries are preplanned on engine boot (reducing first-query latency),
 - boilerplate is reduced and query consistency increased because query outputs and
-parameters don't need to be hardcoded in every query,
+parameters don't need to be hardcoded,
 - common query patterns are easier to track and monitor
 
 ## Defining a NamedQuery
