--- a/named_queries.mdx
+++ b/named_queries.mdx
@@ -39,7 +39,7 @@ NamedQuery(
 )
 ```
 
-Running `chalk apply` makes the query name available in your deployment.
+Running `chalk apply` makes the named query available in your deployment.
 
 ## Using Named Queries
 
