--- a/named_queries.mdx
+++ b/named_queries.mdx
@@ -78,6 +78,7 @@ client.query(
     query_name="book_key_information",
 )
 ```
+## Versioning Named Queries
 
 To see all the named queries you've defined in your current active deployment, you can run:
 ```sh
