--- a/named_queries.mdx
+++ b/named_queries.mdx
@@ -89,7 +89,7 @@ chalk named-query list
 If you want to create multiple versions of a similar query, you can use the [version](/api-docs#NamedQuery.__init__.version) parameter of the NamedQuery object
 and the [query_name_version](/api-docs#ChalkClient.query.query_name_version) parameter of our various clients.
 
-Note when executing a named query, both the query name and the query version must match.
+Note, when executing a named query both the query name and the query version must match.
 This means that if you've defined four named queries in your codebase:
 
 ```python
