--- a/changelog.mdx
+++ b/changelog.mdx
@@ -12,7 +12,7 @@ description: Updates to Chalk!
 ### Offline Query Specifications for shards and workers
 
 When running an asynchronous offline query, you can now specify the inputs `num_shards` and `num_workers` as
-parameters to allow for more granular control over the parallelization of your query execution. To see all of your
+parameters to allow for more granular control over the parallelization of your query execution. To see all of the
 offline query options, check out the [offline query documentation](/api-docs#ChalkClient.offline_query).
 
 In addition, offline query progress reporting now specifies progress by shard, to give developers more insight
