--- a/changelog.mdx
+++ b/changelog.mdx
@@ -15,7 +15,7 @@ When running an asynchronous offline query, you can now specify the inputs `num_
 parameters to allow for more granular control over the parallelization of your query execution. To see all of the
 offline query options, check out the [offline query documentation](/api-docs#ChalkClient.offline_query).
 
-In addition, offline query progress reporting now specifies progress by shard, to give developers more insight
+In addition, offline query progress reporting now specifies progress by shard, giving developers more insight
 into where their offline query is in the execution progress.
 
 ### ChalkClient can now use the default Github branch
