--- a/changelog.mdx
+++ b/changelog.mdx
@@ -28,7 +28,7 @@ our [API documentation](/api-docs#ChalkClient).
 ### Underscore expressions support functions for URL parsing, regular expressions, and more
 
 We've added more functions to `chalk.functions` that can be used in [underscore expressions](/docs/underscore).
-You can now use `regexp_like`, `regeexp_extract`, and `regexp_extract_all` to do regular expression matching and
+You can now use `regexp_like`, `regexp_extract`, `split_part`, and `regexp_extract_all` to do regular expression matching and
 use `url_extract_host`, `url_extract_path`, and `url_extract_prtocol` to parse URL's. In addition, we've added
 helpful logical functions like `if_then_else`, `map_dict`, and `cast` to broaden the span of features that you can
 define using underscore expressions. To read more about all of our functions, check out our
