--- a/changelog.mdx
+++ b/changelog.mdx
@@ -18,9 +18,9 @@ offline query options, check out the [offline query documentation](/api-docs#Cha
 In addition, offline query progress reporting now specifies progress by shard, giving developers more insight
 into where their offline query is in the execution progress.
 
-### ChalkClient can now use the default Github branch
+### ChalkClient can now use the default Git branch
 
-You can now default to using the name of your current Github branch when developing using the `ChalkClient`.
+You can now default to using the name of your current Git branch when developing using the `ChalkClient`.
 For example, if you have checked out a branch named `my-very-own-branch` you can now set `ChalkClient(branch=True)`
 and all of your client calls will be directed at `my-very-own-branch`. To read more about how to use ChalkClient, see
 our [API documentation](/api-docs#ChalkClient).
