--- a/underscore.mdx
+++ b/underscore.mdx
@@ -196,6 +196,7 @@ combination with underscore references to transform features:
 * [`ends_with`](/api-docs#ends_with)
 * [`levenstein_distance`](/api-docs#levenstein_distance)
 * [`replace`](/api-docs#replace)
+* [`split_part`](/api-docs#split_part)
 
 #### URL Manipulation
 
