--- a/underscore.mdx
+++ b/underscore.mdx
@@ -194,7 +194,7 @@ combination with underscore references to transform features:
 * [`regexp_like`](/api-docs#regexp_like)
 * [`starts_with`](/api-docs#starts_with)
 * [`ends_with`](/api-docs#ends_with)
-* [`levenstein_distance`](/api-docs#levenstein_distance)
+* [`levenshtein_distance`](/api-docs#levenshtein_distance)
 * [`replace`](/api-docs#replace)
 * [`split_part`](/api-docs#split_part)
 
