--- a/metrics-installation.mdx
+++ b/metrics-installation.mdx
@@ -61,7 +61,7 @@ The following is an example configuration for a metrics database:
 <AttributeTable>
 <Attribute field={'timescale_image'} kind={'string'}>
 The docker image to use for the metrics database.
-This must be postgres image with the Timescale plugin installes.
+This must be a postgres image with the Timescale plugin installed.
 </Attribute>
 <Attribute field={'database_name'} kind={'string'}>
 The name of the database to create.
