--- a/metricexport.mdx
+++ b/metricexport.mdx
@@ -153,7 +153,7 @@ Provides information about the number of times a cron run was executed. This met
 
 <Attribute field={'cron_feature_writes'} kind={'Counter'}>
 Provides information about the number of features computed by cron written to online / offline store. This
-    metric is useful for monitoring the status of resolver runs that are scheduled or triggered via API to
+    metric is useful for monitoring resolver runs that are scheduled or triggered via API to
     load data into the online and/or offline store.
 
 <SubAttributeTable title={'Tags'}>
