--- a/security.mdx
+++ b/security.mdx
@@ -49,10 +49,9 @@ policies, updated at a minimum on an annual basis, to enforce best
 practices across access control, risk management, change management,
 incident response, and other critical areas.
 We align our policies with standard industry frameworks and
-our controls are certified via a SOC-2 Type 2 and ISO27001 assessment.
+our controls are certified via a SOC-2 Type 2 and ISO/IEC 27001:2022 assessment.
 You can request a copy of our SOC-2 Type 2 certified report,
-Information Security Management System (ISMS) Policy,
-ISO27001 assessment,
+ISO 27001 certificate, Information Security Management System (ISMS) Policy,
 or any other security-related documentation by contacting
 [security@chalk.ai](mailto:security@chalk.ai).
 
