--- a/underscore.mdx
+++ b/underscore.mdx
@@ -152,6 +152,10 @@ combination with underscore references to transform features:
 * [`if_then_else`](/api-docs#if_then_else)
 * [`map_dict`](/api-docs#map_dict)
 * [`coalesce`](/api-docs#coalesce)
+* [`when`](/api-docs#when)
+* [`then`](/api-docs#then)
+* [`otherwise`](/api-docs#otherwise)
+* [`is_null`](/api-docs#is_null)
 
 #### Encoding and decoding
 
@@ -181,6 +185,9 @@ combination with underscore references to transform features:
 * [`exp`](/api-docs#exp)
 * [`ln`](/api-docs#ln)
 * [`power`](/api-docs#power)
+* [`floor`](/api-docs#floor)
+* [`ceil`](/api-docs#ceil)
+* [`abs`](/api-docs#abs)
 
 #### String Manipulation
 
@@ -215,3 +222,4 @@ combination with underscore references to transform features:
 * [`cast`](/api-docs#cast)
 * [`cosine_similarity`](/api-docs#cosine_similarity)
 * [`sagemaker_predict`](/api-docs#sagemaker_predict)
+* [`haversine`](/api-docs#haversine)
