--- a/changelog.mdx
+++ b/changelog.mdx
@@ -33,7 +33,7 @@ expressions in our [API docs](/api-docs#functions).
 ### Dashboard improvements for providing more insights into resolver performance and execution
 
 In the dashboard, users can now view the P50, P75, P95, and P99 latencies for resolvers in the table under
-the `Resolver` tab of the menu. You can also customize which columns are displayed in the table by clickign
+the `Resolver` tab of the menu. You can also customize which columns are displayed in the table by clicking
 the gear icon in the top left corner of the table.
 
 In addition, we've added a SQL Explorer for examining resolver output for queries that are run with the
